# GenForge

./: .env.example  .gitignore  AGENTS.md  README.md  Roteiro.md  docker-compose.yml  environment.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-bio.txt  requirements-dev.txt  requirements-ml.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202606110001_initial_schema.py  202606260001_add_updated_at_to_phase1_tables.py
backend/app/: __init__.py  main.py
backend/app/annotation/: __init__.py  ports.py  service.py
backend/app/auth/: api.py  dependencies.py  schemas.py  service.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  pagination.py  security.py
backend/app/genomic_selection/: __init__.py  ports.py
backend/app/gwas/: __init__.py  ports.py
backend/app/ml/: __init__.py  ports.py
backend/app/projects/: api.py  models.py  repository.py  schemas.py  service.py
backend/app/reports/: ports.py
backend/app/samples/: models.py  repository.py  schemas.py  service.py
backend/app/storage/: local.py  ports.py
backend/app/tasks/: celery_app.py  variant_tasks.py
backend/app/users/: api.py  models.py  repository.py  (+2 more)
backend/scripts/: __init__.py  smoke_phase1.py
backend/tests/: __init__.py  conftest.py  helpers.py  test_auth_users_api.py  test_config.py  test_database_errors.py  test_health.py  test_migrations.py  test_phase1_api.py  test_phase1_smoke_script.py  test_projects_api.py  test_python_compatibility.py  test_security.py  test_variants_api.py  test_vcf_parser.py
(+43 files in other folders)
