[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "genforge-backend"
version = "0.1.0"
description = "Backend da plataforma GenForge para bioinformatica vegetal."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.2.0",
  "SQLAlchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "alembic>=1.13.2",
  "redis>=5.0.8",
  "celery>=5.4.0",
  "python-jose[cryptography]>=3.3.0",
  "argon2-cffi>=23.1.0",
  "python-multipart>=0.0.9",
  "aiofiles>=24.1.0",
]

[project.optional-dependencies]
bio = [
  "biopython>=1.84",
  "pysam>=0.22.1",
  "cyvcf2>=0.31.0",
]
ml = [
  "scikit-learn>=1.5.1",
  "xgboost>=2.1.0",
  "lightgbm>=4.5.0",
  "torch>=2.4.0",
]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.6",
  "mypy>=1.11.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
